--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -4271,8 +4271,7 @@ Usually you will want to use the cutter radius here to cut around the outline.</
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
-                                        <property name="tooltip_text" translatable="yes">Show a simple simulation of the generated toolpath.
-This feature requires the Open Dynamics Engine (ODE).</property>
+                                        <property name="tooltip_text" translatable="yes">Show a simple simulation of the generated toolpath.</property>
                                         <property name="image">ShowToolPathSimulation</property>
                                       </object>
                                       <packing>
@@ -4377,6 +4376,7 @@ This feature requires the Open Dynamics Engine (ODE).</property>
         </child>
         <child>
           <object class="GtkHBox" id="ProgressWidget">
+            <property name="spacing">3</property>
             <child>
               <object class="GtkProgressBar" id="ProgressBar">
                 <property name="visible">True</property>
@@ -4387,11 +4387,33 @@ This feature requires the Open Dynamics Engine (ODE).</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="ProgressCancelButton">
-                <property name="label" translatable="yes">Cancel</property>
+              <object class="GtkVBox" id="vbox13">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkToggleButton" id="ShowToolpathProgressButton">
+                    <property name="label" translatable="yes">Show Progress</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="ProgressCancelButton">
+                    <property name="label" translatable="yes">Cancel</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -5414,7 +5436,7 @@ Leave this field empty to use the default ("ngc").</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="ShowDrillProgressCheckBox">
+                          <object class="GtkCheckButton" id="ShowDrillCheckBox">
                             <property name="label" translatable="yes">Show Drill</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -7804,7 +7826,6 @@ Please read the description of the Server Mode (linked below) to understand the 
   <object class="GtkDialog" id="SimulationDialog">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">PyCAM simulation</property>
-    <property name="modal">True</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
@@ -7868,6 +7889,29 @@ upon interesting bugs and weird results.</property>
               </packing>
             </child>
             <child>
+              <object class="GtkLabel" id="SimulationProgressTimelineLabel">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">Progress:</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkHScale" id="SimulationProgressTimeline">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="adjustment">SimulationProgressTimelineValue</property>
+                <property name="draw_value">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkHBox" id="hbox36">
                 <property name="visible">True</property>
                 <property name="spacing">4</property>
@@ -7895,7 +7939,7 @@ upon interesting bugs and weird results.</property>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="position">2</property>
+                <property name="position">4</property>
               </packing>
             </child>
             <child>
@@ -7908,7 +7952,7 @@ upon interesting bugs and weird results.</property>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="position">3</property>
+                <property name="position">5</property>
               </packing>
             </child>
           </object>
@@ -7921,34 +7965,6 @@ upon interesting bugs and weird results.</property>
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="SimulationCancelButton">
-                <property name="label">gtk-cancel</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="UpdateSimulationButton">
-                <property name="label">gtk-refresh</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkButton" id="ExitSimulationButton">
                 <property name="label">gtk-close</property>
                 <property name="visible">True</property>
@@ -7959,7 +7975,7 @@ upon interesting bugs and weird results.</property>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -7972,9 +7988,11 @@ upon interesting bugs and weird results.</property>
       </object>
     </child>
     <action-widgets>
-      <action-widget response="0">SimulationCancelButton</action-widget>
-      <action-widget response="0">UpdateSimulationButton</action-widget>
       <action-widget response="0">ExitSimulationButton</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkAdjustment" id="SimulationProgressTimelineValue">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
   </object>
 </interface>
