--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -7323,6 +7323,19 @@ Any selected group of dimensions will be scaled accordingly.</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkLabel" id="ProcessPoolDetails">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes"></property>
+                    <property name="use_markup">True</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">0</property>
