added support for automatically distributed support bridges at corners or at edges
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@959 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -216,7 +216,10 @@
         <col id="0" translatable="yes">grid pattern</col>
       </row>
       <row>
-        <col id="0" translatable="yes">automatic distribution</col>
+        <col id="0" translatable="yes">automatic distribution (edges)</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">automatic distribution (corners)</col>
       </row>
     </data>
   </object>
